Initial commit: LLM Share Widget - Drop-in JavaScript widget for sending pages to LLMs

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     };
 
     let installMethod = 'cdn';
-    const CDN_URL = 'https://cdn.sendto.chat/loader.js';
+    const CDN_URL = 'https://cdn.getsourced.ai/loader.js';
     let widgetInstance = null;
 
     // Mode change handler
